--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.17.0",
+    "@react-email/render": "^1.3.2",
     "clsx": "^2.1.1",
     "libphonenumber-js": "^1.12.23",
     "lucide-react": "^0.545.0",
