--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.17.0",
     "@react-email/render": "^1.3.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
     "libphonenumber-js": "^1.12.23",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
