--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
     "resend": "^6.1.2",
+    "socket.io-client": "^4.8.1",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
