fix: Mejorar visibilidad del input y corregir nombre del bot
-  Bot actualizado: @bridgeIA_bot (antes @BridgeAppBot)
-  Input de código ahora muestra texto blanco/claro
-  Placeholder más visible (gray-400/500)
-  Mejor contraste en dark mode
-  Actualizado en utils, .env.example y toda la documentación
-  UX mejorada: El usuario puede ver lo que escribe claramente

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ NEXT_PUBLIC_AI_API_URL=http://localhost:4101
 
 # Telegram Integration (Nuevo ✨)
 # Username del bot de Telegram (sin @)
-# Si no se configura, usa "BridgeAppBot" por defecto
-NEXT_PUBLIC_TELEGRAM_BOT_USERNAME=BridgeAppBot
+# Si no se configura, usa "bridgeIA_bot" por defecto
+NEXT_PUBLIC_TELEGRAM_BOT_USERNAME=bridgeIA_bot
 
 # App Frontend
 NEXT_PUBLIC_APP_BASE_URL=http://localhost:3000
